@@ -1,5 +1,12 @@
-2000-08-02  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>
+2000-08-02  Eugene Crosser <crosser@online.ru>
 
+	* transports/smtp/getmxrr.c:
+	    Yet another wrong index variable usage -- one which affects
+	    MX-list purge of self-identity matching servers.
+	    Sympom:  "No MX, no address"
+	
+2000-08-02  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>
+	
 	* libc/getaddrinfo.c, libc/getnameinfo.c:
 	    Picked lattest versions out from  GLIBC 2.1.92 source,
 	    and cleaned it up to be simple single-threaded thing
